# os-lab-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: core.h  logic.h
src/: core.cpp  logic.cpp  main.cpp
tests/: tests.cpp
